--- a/frontend/pantry-ui/package.json
+++ b/frontend/pantry-ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^3.4.29",
+    "vue-barcode-reader": "^1.0.3",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
